# doublestaticinit

./: CMakeLists.txt  DoubleStaticInit_test.cmake  README.md  checkall.sh  checker.cpp  gdbchecker  glibcversion.cpp  setup-centos.sh  setup-debian.sh  setup-fedora.sh  setup-ubuntu.sh
